# node-calculateNFP

./: .gitignore  .last-shasum  .npmignore  .vsconfig  binding.gyp  build-linux.sh  build-macos.sh  build-windows-install.ps1  build-windows.ps1  build.ps1  index.js  package.json  readme.md  testing.js
.github/workflows/: build.yml
rust-minkowski/: Cargo.toml  build.rs
rust-minkowski/examples/: README.md  basic_nfp.rs  complex_nfp.rs
rust-minkowski/src/: bindings.rs  lib.rs  minkowski.rs
src/: addon.cc  minkowski.cc  minkowski.h
src/polygon/: transform.hpp
test/: nfp.test.js
